--- a/services/univention-printserver/debian/changelog
+++ b/services/univention-printserver/debian/changelog
@@ -1,3 +1,9 @@
+univention-printserver (7.0.11-1) unstable; urgency=low
+
+  * revised UMC module description (Bug #32022)
+
+ -- Lukas Walter <walter@univention.de>  Wed, 30 Oct 2013 16:44:01 +0100
+
 univention-printserver (7.0.10-4) unstable; urgency=low
 
   * Fix ldapmodify call (Bug #31624)
