* Bug #23214: Merge NewObjectDialog and NewObjectWizards
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45721 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,5 +1,11 @@
 univention-management-console-module-udm (4.0.74-1) unstable; urgency=low
 
+  * Bug #23214: Merge NewObjectDialog and NewObjectWizards
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Wed, 30 Oct 2013 17:05:35 +0100
+
+univention-management-console-module-udm (4.0.74-1) unstable; urgency=low
+
   * revised UMC module description (Bug #32022)
 
  -- Lukas Walter <walter@univention.de>  Wed, 30 Oct 2013 16:47:32 +0100
