Bug #32931: Add missing Depends: python-ipaddr
Also use ${python:Depends} to pick-up additional dependencies.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45722 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-ipcalc/debian/changelog
+++ b/base/univention-ipcalc/debian/changelog
@@ -1,3 +1,9 @@
+univention-ipcalc (5.0.0-3) unstable; urgency=low
+
+  * Add missing Depends: python-ipaddr (Bug #32931)
+
+ -- Philipp Hahn <hahn@univention.de>  Wed, 30 Oct 2013 17:09:22 +0100
+
 univention-ipcalc (5.0.0-2) unstable; urgency=low
 
   * Add missing Build-Depends: python-ipaddr (Bug #32931)
