* Bug #33026: adjusted UMC icon
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45724 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (3.0.138-1) unstable; urgency=low
+
+  * Bug #33026: adjusted UMC icon
+
+ -- Alexander Kläser <klaeser@univention.de>  Wed, 30 Oct 2013 17:16:18 +0100
+
 univention-management-console-frontend (3.0.137-1) unstable; urgency=low
 
   * Bug #32978: allow MixedInput::dynamicValues to be a function
