* Bug #33026: adjusted title and description of UMC entry on UCS start site
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45727 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (3.0.138-2) unstable; urgency=low
+
+  * Bug #33026: adjusted title and description of UMC entry on UCS start site
+
+ -- Alexander Kläser <klaeser@univention.de>  Wed, 30 Oct 2013 17:35:39 +0100
+
 univention-management-console-frontend (3.0.138-1) unstable; urgency=low
 
   * Bug #33026: adjusted UMC icon
