--- a/base/univention-base-files/debian/changelog
+++ b/base/univention-base-files/debian/changelog
@@ -1,3 +1,9 @@
+univention-base-files (3.0.4-1) unstable; urgency=low
+
+  * Update/review UCR variable descriptions (Bug #30943)
+
+ -- Philipp Hahn <hahn@univention.de>  Wed, 30 Oct 2013 17:45:11 +0100
+
 univention-base-files (3.0.3-7) unstable; urgency=low
 
   * Provide a modprobe configuration file for vmwgfx (the DRM driver for vmware) to
