--- a/test/ucs-ec2-tools/debian/changelog
+++ b/test/ucs-ec2-tools/debian/changelog
@@ -1,3 +1,9 @@
+ucs-ec2-tools (0.1.12-1) unstable; urgency=low
+
+  * Disable normal cron jobs on test VMs to prevent concurrent updates (Bug #31773)
+
+ -- Philipp Hahn <hahn@univention.de>  Wed, 30 Oct 2013 18:04:01 +0100
+
 ucs-ec2-tools (0.1.11-1) unstable; urgency=low
 
   * fixed common spelling mistakes (Bug #32662)
