--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (3.0.139-1) unstable; urgency=low
+
+  * Bug #32978: fixed static array reference in umc/store
+
+ -- Alexander Kläser <klaeser@univention.de>  Wed, 30 Oct 2013 18:16:33 +0100
+
 univention-management-console-frontend (3.0.138-2) unstable; urgency=low
 
   * Bug #33026: adjusted title and description of UMC entry on UCS start site
