--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-udm (4.0.76-1) unstable; urgency=low
+
+  * Bug #32978: integrated cache into wizard
+
+ -- Alexander Kläser <klaeser@univention.de>  Wed, 30 Oct 2013 18:42:30 +0100
+
 univention-management-console-module-udm (4.0.75-1) unstable; urgency=low
 
   * Bug #23214: Merge NewObjectDialog and NewObjectWizards
