--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.160-1) unstable; urgency=low
+
+  * Fix random generator and remove unused code (Bug #32793)
+
+ -- Philipp Hahn <hahn@univention.de>  Wed, 30 Oct 2013 20:19:11 +0100
+
 ucs-test (4.0.159-1) unstable; urgency=low
 
   * 10_ldap/83acl_registration_versioncheck: Test case for ucsversionend
