* Bug #23214: Fixes for wizards, especially regarding cache and focus
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45737 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-udm (4.0.77-1) unstable; urgency=low
+
+  * Bug #23214: Fixes for wizards, especially regarding cache and focus
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Thu, 31 Oct 2013 00:06:33 +0100
+
 univention-management-console-module-udm (4.0.76-1) unstable; urgency=low
 
   * Bug #32978: integrated cache into wizard
