* Stopping some major services like listener or samba with their init   script. Otherwise the global killall5 -15 will terminate the jobs   which is OK but probably not the best (Bug #33025)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45740 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-installer/debian/changelog
+++ b/base/univention-installer/debian/changelog
@@ -1,3 +1,11 @@
+univention-installer (9.0.29-1) unstable; urgency=low
+
+  * Stopping some major services like listener or samba with their init
+    script. Otherwise the global killall5 -15 will terminate the jobs
+    which is OK but probably not the best (Bug #33025)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Thu, 31 Oct 2013 06:42:24 +0100
+
 univention-installer (9.0.28-2) unstable; urgency=low
 
   * Bug #28672: install univention-uefi-secureboot if UEFI has been detected/chosen
