--- a/test/ucs-ec2-tools/debian/changelog
+++ b/test/ucs-ec2-tools/debian/changelog
@@ -1,3 +1,9 @@
+ucs-ec2-tools (0.1.13-1) unstable; urgency=low
+
+  * Rename utils lib to utils.sh and add copyright headers(Bug #32798)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Thu, 31 Oct 2013 09:26:39 +0100
+
 ucs-ec2-tools (0.1.12-1) unstable; urgency=low
 
   * Disable normal cron jobs on test VMs to prevent concurrent updates (Bug #31773)
