--- a/test/ucs-ec2-tools/debian/changelog
+++ b/test/ucs-ec2-tools/debian/changelog
@@ -1,3 +1,9 @@
+ucs-ec2-tools (0.1.14-1) unstable; urgency=low
+
+  * Re-enable UCR cron jobs on test VMs (Bug #31773)
+
+ -- Philipp Hahn <hahn@univention.de>  Thu, 31 Oct 2013 10:07:27 +0100
+
 ucs-ec2-tools (0.1.13-1) unstable; urgency=low
 
   * Rename utils lib to utils.sh and add copyright headers(Bug #32798)
