cleaned up squid.conf (Bug #32183) added http_access allow CONNECT AuthorizedUsers
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45747 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-squid/debian/changelog
+++ b/services/univention-squid/debian/changelog
@@ -1,3 +1,10 @@
+univention-squid (7.0.3-1) unstable; urgency=low
+
+  * cleaned up squid.conf (Bug #32183)
+    added http_access allow CONNECT AuthorizedUsers
+
+ -- Felix Botner <botner@univention.de>  Thu, 31 Oct 2013 10:41:35 +0100
+
 univention-squid (7.0.2-1) unstable; urgency=low
 
   * added unjoin scripts (Bug #32447) 
