removed squid/sslports (Bug #32183)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45748 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-squid/debian/changelog
+++ b/services/univention-squid/debian/changelog
@@ -1,3 +1,9 @@
+univention-squid (7.0.3-2) unstable; urgency=low
+
+  * removed squid/sslports (Bug #32183) 
+
+ -- Felix Botner <botner@univention.de>  Thu, 31 Oct 2013 10:51:40 +0100
+
 univention-squid (7.0.3-1) unstable; urgency=low
 
   * cleaned up squid.conf (Bug #32183)
