fixed UCR variable descriptions (Bug #28123)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45754 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/mail/univention-mail-cyrus/debian/changelog
+++ b/mail/univention-mail-cyrus/debian/changelog
@@ -1,3 +1,9 @@
+univention-mail-cyrus (6.0.5-4) unstable; urgency=low
+
+  * fixed UCR variable descriptions (Bug #28123) 
+
+ -- Felix Botner <botner@univention.de>  Thu, 31 Oct 2013 12:16:06 +0100
+
 univention-mail-cyrus (6.0.5-3) unstable; urgency=low
 
   * Bug #30945: Improved UCR variable description for mail/cyrus/folder/predefined_folders
