--- a/management/univention-management-console-module-services/debian/changelog
+++ b/management/univention-management-console-module-services/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-services (3.0.3-1) unstable; urgency=low
+
+  * fixed typo (Bug #32022)
+
+ -- Lukas Walter <walter@univention.de>  Thu, 31 Oct 2013 12:13:34 +0100
+
 univention-management-console-module-services (3.0.2-1) unstable; urgency=low
 
   * revised UMC module description (Bug #32022)
