--- a/mail/univention-mail-cyrus/debian/changelog
+++ b/mail/univention-mail-cyrus/debian/changelog
@@ -1,3 +1,9 @@
+univention-mail-cyrus (6.0.5-5) unstable; urgency=low
+
+  * fixed UCR variable descriptions (Bug #28123) 
+
+ -- Felix Botner <botner@univention.de>  Thu, 31 Oct 2013 12:23:41 +0100
+
 univention-mail-cyrus (6.0.5-4) unstable; urgency=low
 
   * fixed UCR variable descriptions (Bug #28123) 
