* Bug #32978: added caching for module wizards
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45758 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-udm (4.0.82-1) unstable; urgency=low
+
+  * Bug #32978: added caching for module wizards
+
+ -- Alexander Kläser <klaeser@univention.de>  Thu, 31 Oct 2013 13:15:09 +0100
+
 univention-management-console-module-udm (4.0.81-1) unstable; urgency=low
 
   * Bug #32978: fixed reference error
