--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (3.0.140-1) unstable; urgency=low
+
+  * Bug #32978: revert changes in _SelectMixin from version 3.0.134-1
+
+ -- Alexander Kläser <klaeser@univention.de>  Thu, 31 Oct 2013 13:58:46 +0100
+
 univention-management-console-frontend (3.0.139-1) unstable; urgency=low
 
   * Bug #32978: fixed static array reference in umc/store
