--- a/base/univention-updater/umc/de.po
+++ b/base/univention-updater/umc/de.po
@@ -11,8 +11,8 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-msgid "Overview and installation of available updates for the local UCS system"
-msgstr "Überblick und Installation der für das lokale UCS-System verfügbaren Aktualisierungen"
+msgid "Overview and installation of available updates for the local system"
+msgstr "Überblick und Installation der für das lokale System verfügbaren Aktualisierungen"
 
 msgid "Software update"
 msgstr "Software-Aktualisierung"
