--- a/management/univention-management-console-module-udm/umc/de.po
+++ b/management/univention-management-console-module-udm/umc/de.po
@@ -56,11 +56,11 @@ msgstr ""
 "Domäne"
 
 msgid ""
-"Management of printer shares and printer share groups in "
+"Management of printers and printer groups in "
 "the domain"
 msgstr ""
-"Verwaltung von Druckerfreigaben und Gruppen von "
-"Druckerfreigaben in der Domäne"
+"Verwaltung von Druckern und "
+"Druckergruppen in der Domäne"
 
 msgid "DHCP"
 msgstr "DHCP"
