--- a/management/univention-management-console-module-mrtg/debian/changelog
+++ b/management/univention-management-console-module-mrtg/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-mrtg (2.0.6-1) unstable; urgency=low
+
+  * revised UMD moculde description (Bug #32022)
+
+ -- Lukas Walter <walter@univention.de>  Thu, 31 Oct 2013 13:42:37 +0100
+
 univention-management-console-module-mrtg (2.0.5-1) unstable; urgency=low
 
   * corrected UMC module description (Bug #32022)
