* Bug #32389: resize confirm dialog which title panes hide or show
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45762 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (3.0.141-1) unstable; urgency=low
+
+  * Bug #32389: resize confirm dialog which title panes hide or show
+
+ -- Florian Best <best@univention.de>  Thu, 31 Oct 2013 15:38:07 +0100
+
 univention-management-console-frontend (3.0.140-1) unstable; urgency=low
 
   * Bug #32978: revert changes in _SelectMixin from version 3.0.134-1
