* Pre-upgrade python-univention-directory-manager-uvmm in preup.sh   (Bug #24774)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45764 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-updater/debian/changelog
+++ b/base/univention-updater/debian/changelog
@@ -1,3 +1,10 @@
+univention-updater (9.0.28-1) unstable; urgency=low
+
+  * Pre-upgrade python-univention-directory-manager-uvmm in preup.sh
+    (Bug #24774)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Thu, 31 Oct 2013 15:51:09 +0100
+
 univention-updater (9.0.27-1) unstable; urgency=low
 
   * revised UMC module description (Bug #32022)
