* Add dependency on python-univention-lib (Bug #32409)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45765 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-manager-modules (9.0.75-1) unstable; urgency=low
+
+  * Add dependency on python-univention-lib (Bug #32409)
+
+ -- Arvid Requate <requate@univention.de>  Thu, 31 Oct 2013 16:08:21 +0100
+
 univention-directory-manager-modules (9.0.74-1) unstable; urgency=low
 
   * additional minor change to exended attribute descriptions (Bug #29629)
