Bug #28670: USS: Fix DNS reverse zone issues
Update the reference to the DNS reverse zone in
computer.info["reverseZone"].

> INFO:uss.network.phase.LdapSelf:Updating 'cn=mas11,cn=dc,cn=computers,dc=phahn,dc=dev' with '[('ip', ['192.168.122.11'], ['10.0.0.11']), ('mac', [], ['52:54:00:c5:0d:48'])]'...
> WARNING:uss.network.phase.LdapSelf:Failed LDAP: Reverse zone and IP address are incompatible.
> Traceback (most recent call last):
>   File "/usr/lib/pymodules/python2.6/univention/management/console/modules/setup/netconf/modules/LdapSelf.py", line 35, in post
>     self._update(computer)
>   File "/usr/lib/pymodules/python2.6/univention/management/console/modules/setup/netconf/modules/LdapSelf.py", line 88, in _update
>     computer.modify()
>   File "/usr/lib/pymodules/python2.6/univention/admin/handlers/__init__.py", line 344, in modify
>     return self._modify(modify_childs,ignore_license=ignore_license)
>   File "/usr/lib/pymodules/python2.6/univention/admin/handlers/__init__.py", line 871, in _modify
>     self._ldap_post_modify()
>   File "/usr/lib/pymodules/python2.6/univention/admin/handlers/computers/domaincontroller_master.py", line 583, in _ldap_post_modify
>     univention.admin.handlers.simpleComputer._ldap_post_modify( self )
>   File "/usr/lib/pymodules/python2.6/univention/admin/handlers/__init__.py", line 1959, in _ldap_post_modify
>     self.__add_dns_reverse_object( self[ 'name' ], x, entry )
>   File "/usr/lib/pymodules/python2.6/univention/admin/handlers/__init__.py", line 1556, in __add_dns_reverse_object
>     raise univention.admin.uexceptions.InvalidDNS_Information, _( 'Reverse zone and IP address are incompatible.' )
> InvalidDNS_Information: Reverse zone and IP address are incompatible.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45770 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (7.0.61-2) unstable; urgency=low
+
+  * Fix several DNS reverse zone issues (Bug #28670)
+
+ -- Philipp Hahn <hahn@univention.de>  Thu, 31 Oct 2013 11:30:47 +0100
+
 univention-system-setup (7.0.61-1) unstable; urgency=low
 
   * Bug #30816: disable network page and implement notification when using
