* Bug #32978: fixed problems with option handling
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45772 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-udm (4.0.84-1) unstable; urgency=low
+
+  * Bug #32978: fixed problems with option handling
+
+ -- Alexander Kläser <klaeser@univention.de>  Thu, 31 Oct 2013 16:48:32 +0100
+
 univention-management-console-module-udm (4.0.83-1) unstable; urgency=low
 
   * revised UMC module description (Bug #32022)
