--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.161-1) unstable; urgency=low
+
+  * Support UCS@school ldbcontrol in s4 connector tests (Bug #32798)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Thu, 31 Oct 2013 16:58:12 +0100
+
 ucs-test (4.0.160-1) unstable; urgency=low
 
   * Fix random generator and remove unused code (Bug #32793)
