--- a/management/univention-management-console/debian/changelog
+++ b/management/univention-management-console/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console (6.0.22-1) unstable; urgency=low
+
+  * Add dependency on python-udm (Bug #32409)
+
+ -- Arvid Requate <requate@univention.de>  Thu, 31 Oct 2013 17:04:23 +0100
+
 univention-management-console (6.0.21-2) unstable; urgency=low
 
   * Bug #32565: Improve fallback logging
