--- a/virtualization/univention-virtual-machine-manager-node/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-node/debian/changelog
@@ -1,3 +1,11 @@
+univention-virtual-machine-manager-node (2.0.5-1) unstable; urgency=low
+
+  * Rename ucr variable from umc/modules/setup/network to
+    umc/modules/setup/network/disabled/by (Bug #33006)
+  * Unset umc/modules/setup/network/disabled/by in postrm
+
+ -- Stefan Gohmann <gohmann@univention.de>  Thu, 31 Oct 2013 17:08:09 +0100
+
 univention-virtual-machine-manager-node (2.0.4-1) unstable; urgency=low
 
   * Disable UMC basic settings network configuration while KVM and Xen scripts
