* Add versioned dependency on univention-ldap-server to ensure   that the new LDAP schema objectclass used by settings/udmmodule etc.   is available at the time umc-module-appcenter calls the module in it's   postinst/joinscript (Bug #32409).
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45777 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,12 @@
+univention-directory-manager-modules (9.0.75-2) unstable; urgency=low
+
+  * Add versioned dependency on univention-ldap-server to ensure
+    that the new LDAP schema objectclass used by settings/udmmodule etc.
+    is available at the time umc-module-appcenter calls the module in it's
+    postinst/joinscript (Bug #32409).
+
+ -- Arvid Requate <requate@univention.de>  Thu, 31 Oct 2013 17:47:40 +0100
+
 univention-directory-manager-modules (9.0.75-1) unstable; urgency=low
 
   * Add dependency on python-univention-lib (Bug #32409)
