* generalize the versioned dependency of shell-univention-lib on   python-univention-lib (Bug #32409)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45778 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-lib/debian/changelog
+++ b/base/univention-lib/debian/changelog
@@ -1,3 +1,10 @@
+univention-lib (3.0.25-6) unstable; urgency=low
+
+  * generalize the versioned dependency of shell-univention-lib on
+    python-univention-lib (Bug #32409)
+
+ -- Arvid Requate <requate@univention.de>  Thu, 31 Oct 2013 17:49:30 +0100
+
 univention-lib (3.0.25-5) unstable; urgency=low
 
   * fix setting multivalued udm property with complex syntax
