* Bug #30004: added delay to auto closing of notifications, mark notifications as read when clicking on a link, adjust 411 error notification during long polling
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45779 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,11 @@
+univention-management-console-frontend (3.0.142-1) unstable; urgency=low
+
+  * Bug #30004: added delay to auto closing of notifications, mark
+    notifications as read when clicking on a link, adjust 411 error
+    notification during long polling
+
+ -- Alexander Kläser <klaeser@univention.de>  Thu, 31 Oct 2013 17:47:50 +0100
+
 univention-management-console-frontend (3.0.141-1) unstable; urgency=low
 
   * Bug #32389: resize confirm dialog which title panes hide or show
