only iterate over errata components in postinst (Bug #30904)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45780 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-appcenter/debian/changelog
+++ b/management/univention-management-console-module-appcenter/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-appcenter (3.0.48-4) unstable; urgency=low
+
+  * only iterate over errata components in postinst (Bug #30904)
+
+ -- Lukas Walter <walter@univention.de>  Thu, 31 Oct 2013 17:51:40 +0100
+
 univention-management-console-module-appcenter (3.0.48-3) unstable; urgency=low
 
   * removed obsolete code (Bug #30904)
