--- a/virtualization/univention-virtual-machine-manager-node/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-node/debian/changelog
@@ -1,3 +1,10 @@
+univention-virtual-machine-manager-node (2.0.5-2) unstable; urgency=low
+
+  * Bug #33006: fix removal of umc/modules/setup/network/disabled/by for XEN
+  	systems
+
+ -- Florian Best <best@univention.de>  Fri, 01 Nov 2013 08:27:29 +0100
+
 univention-virtual-machine-manager-node (2.0.5-1) unstable; urgency=low
 
   * Rename ucr variable from umc/modules/setup/network to
