* Bug #30816: update UCR variable used for disabling network configuration
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45786 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,10 @@
+univention-system-setup (7.0.62-1) unstable; urgency=low
+
+  * Bug #30816: update UCR variable used for disabling network
+    configuration
+
+ -- Florian Best <best@univention.de>  Fri, 01 Nov 2013 08:54:10 +0100
+
 univention-system-setup (7.0.61-2) unstable; urgency=low
 
   * Fix several DNS reverse zone issues (Bug #28670)
