--- a/management/univention-management-console-module-appcenter/debian/changelog
+++ b/management/univention-management-console-module-appcenter/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-appcenter (3.0.48-5) unstable; urgency=low
+
+  * remove ucsschool-errata component from UCR when updating (Bug #30904)
+
+ -- Lukas Walter <walter@univention.de>  Fri, 01 Nov 2013 10:14:34 +0100
+
 univention-management-console-module-appcenter (3.0.48-4) unstable; urgency=low
 
   * only iterate over errata components in postinst (Bug #30904)
