* Bug #32902: fix handling of errors in Uploader
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45790 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (3.0.143-1) unstable; urgency=low
+
+  * Bug #32902: fix handling of errors in Uploader
+
+ -- Florian Best <best@univention.de>  Fri, 01 Nov 2013 10:17:24 +0100
+
 univention-management-console-frontend (3.0.142-1) unstable; urgency=low
 
   * Bug #30004: added delay to auto closing of notifications, mark
