--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-udm (4.0.85-1) unstable; urgency=low
+
+  * Bug #32978: handle UDM objects without options properly
+
+ -- Alexander Kläser <klaeser@univention.de>  Fri, 01 Nov 2013 10:22:11 +0100
+
 univention-management-console-module-udm (4.0.84-1) unstable; urgency=low
 
   * Bug #32978: fixed problems with option handling
