* Bug #23214: make autoHide feature of ComboBox dynamic
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45796 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (3.0.144-1) unstable; urgency=low
+
+  * Bug #23214: make autoHide feature of ComboBox dynamic
+
+ -- Alexander Kläser <klaeser@univention.de>  Fri, 01 Nov 2013 11:55:20 +0100
+
 univention-management-console-frontend (3.0.143-1) unstable; urgency=low
 
   * Bug #32902: fix handling of errors in Uploader
