* Bug #23214: removed unneeded Deferred for NewObjectDialog, added autoHide for template combo box * Bug #32978: adjusted calls to getChildModules() to return id-label pairs
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45797 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,11 @@
+univention-management-console-module-udm (4.0.86-1) unstable; urgency=low
+
+  * Bug #23214: removed unneeded Deferred for NewObjectDialog, added autoHide
+    for template combo box
+  * Bug #32978: adjusted calls to getChildModules() to return id-label pairs
+
+ -- Alexander Kläser <klaeser@univention.de>  Fri, 01 Nov 2013 11:57:51 +0100
+
 univention-management-console-module-udm (4.0.85-1) unstable; urgency=low
 
   * Bug #32978: handle UDM objects without options properly
