* Bug #32750: Improve layout of search page with "hidden" widget for special cases
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45798 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-module-udm (4.0.87-1) unstable; urgency=low
+
+  * Bug #32750: Improve layout of search page with "hidden" widget for special
+    cases
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Fri, 01 Nov 2013 12:40:37 +0100
+
 univention-management-console-module-udm (4.0.86-1) unstable; urgency=low
 
   * Bug #23214: removed unneeded Deferred for NewObjectDialog, added autoHide
