* Bug #32381: Bug #32978: don't cache superordinates
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45801 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-udm (4.0.88-1) unstable; urgency=low
+
+  * Bug #32381: Bug #32978: don't cache superordinates
+
+ -- Florian Best <best@univention.de>  Fri, 01 Nov 2013 13:36:03 +0100
+
 univention-management-console-module-udm (4.0.87-1) unstable; urgency=low
 
   * Bug #32750: Improve layout of search page with "hidden" widget for special
