* Bug #32698: remove target="_blank"
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45802 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-ad-connector (8.0.17-1) unstable; urgency=low
+
+  * Bug #32698: remove target="_blank"
+
+ -- Florian Best <best@univention.de>  Fri, 01 Nov 2013 13:42:05 +0100
+
 univention-ad-connector (8.0.16-2) unstable; urgency=low
 
   * Bug #32698: remove private keys on update
