* Bug #26418: fix typo
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45803 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/virtualization/univention-virtual-machine-manager-daemon/umc/js/de.po
+++ b/virtualization/univention-virtual-machine-manager-daemon/umc/js/de.po
@@ -763,7 +763,7 @@ msgstr "Anzahl der CPUs"
 
 #: umc/js/uvmm.js:803 umc/js/uvmm.js:968
 msgid "Open a view to the virtual machine {label} on {nodeName}"
-msgstr "Öffne eine Anzeige der virtuellen Maschine {label} auf {nodeName}"
+msgstr "Öffnet eine Anzeige der virtuellen Maschine {label} auf {nodeName}"
 
 #: umc/js/uvmm/DomainPage.js:117
 msgid "Operating system"
