--- a/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
@@ -1,3 +1,9 @@
+univention-virtual-machine-manager-daemon (3.0.16-1) unstable; urgency=low
+
+  * Bug #26418: fix typo
+
+ -- Florian Best <best@univention.de>  Fri, 01 Nov 2013 13:51:22 +0100
+
 univention-virtual-machine-manager-daemon (3.0.15-1) unstable; urgency=low
 
   * Bug #26418: fix typo
