* Bug #32978: adapt handling of cache resetting
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45805 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-udm (4.0.89-1) unstable; urgency=low
+
+  * Bug #32978: adapt handling of cache resetting
+
+ -- Alexander Kläser <klaeser@univention.de>  Fri, 01 Nov 2013 14:28:38 +0100
+
 univention-management-console-module-udm (4.0.88-1) unstable; urgency=low
 
   * Bug #32381: Bug #32978: don't cache superordinates
