Bug #30540: UVMM: Fix change detection for noVNC
The token file is only updated when the cache ID changes. Since the ID
only was calculated from static data, an update to the dynamic VNC port
was not detected.

Include some more data into the calculation of the ID.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45810 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
@@ -1,3 +1,9 @@
+univention-virtual-machine-manager-daemon (3.0.17-1) unstable; urgency=low
+
+  * Fix change detection for noVNC (Bug #30540)
+
+ -- Philipp Hahn <hahn@univention.de>  Fri, 01 Nov 2013 14:38:32 +0100
+
 univention-virtual-machine-manager-daemon (3.0.16-1) unstable; urgency=low
 
   * Bug #26418: fix typo
